--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <link rel="stylesheet" href="bluestyle.css">
 </head>
 <body>
-
+<h2>edited</h2>
 <h1>Hello world!</h1>
 <div><img src="history.png" alt="Hello World from Space" style="width:100%;max-width:640px"></div>
 <p>This is the first file in my new Git Repo.</p>
